# test_task_2

./: .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/src/: admin.py  celery.py  models.py  settings.py  tasks.py  urls.py  views.py
src/src/migrations/: 0001_initial.py  0002_rewardlog_scheduledreward.py  0003_user_last_time_asked_reward.py
