[tool.poetry]
name = "api-test"
version = "0.1.0"
description = ""
authors = ["Aleksei Chistov <aleksey.chistov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.16.0"
djangorestframework-simplejwt = "^5.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
